v1/docs/05_完整工作流程指南.md
# 交易提示字自動化系統 - 完整工作流程指南

## 📋 目錄

1. [系統概述](#系統概述)
2. [最佳實踐：混合模式](#最佳實踐混合模式)
3. [完整工作流程](#完整工作流程)
4. [Blave 數據抓取任務](#blave-數據抓取任務)
5. [網路搜索關鍵字清單](#網路搜索關鍵字清單)
6. [交易提示詞模板](#交易提示詞模板)

---

## 🎯 系統概述

本系統採用 **混合模式（Hybrid Mode）**，結合：
- **Blave 平台** - 深度結構化數據（專業數據）
- **網路搜索** - 最新即時資訊（廣度數據）
- **TradingView** - Volume Profile（技術分析）

---

## ✨ 最佳實踐：混合模式

### 為什麼混合模式？

| 數據來源 | 優點 | 適用場景 |
|---------|------|---------|
| **Blave** | 深度、結構化、獨特指標 | 籌碼集中度、巨鯨追蹤、OI失衡 |
| **網路搜索** | 最新、即時、廣度 | 最新價格、新聞、市場情緒 |
| **TradingView** | Volume Profile 權威 | POC/VAH/VAL 技術位 |

### 混合模式分工

#### Blave 負責（深度數據）
1. ✅ 籌碼集中度 - 持有者分佈
2. ✅ 巨鯨警報 - 大戶動向
3. ✅ Blave 頂尖交易員 - 聰明錢追蹤
4. ✅ OI 失衡 - 合約數據
5. ✅ 資金費率 - 永續合約
6. ✅ 多空力道 - 買賣壓力
7. ✅ 爆倉數據 - 清算熱圖
8. ✅ 市場情緒 - 整體氛圍

#### 網路搜索負責（最新資訊）
1. ✅ 最新價格 - BTC/ETH/SOL 等即時市價
2. ✅ 最新新聞 - 市場驅動因子
3. ✅ 經濟行事曆 - 總體經濟數據
4. ✅ 熱門板塊 - 當前趨勢
5. ✅ 技術分析共識 - 市場觀點匯總
6. ✅ 地緣政治風險 - 宏觀事件

---

## 🚀 完整工作流程

### 階段 1：準備工作

```powershell
# 進入專案目錄
cd c:\Users\hunny\OneDrive\桌面\測試\交易提示字

# 確保已安裝依賴
npm install
```

### 階段 2：【您手動執行】Blave 數據抓取（選擇性）

如果需要深度數據，您可以選擇以下任一方式執行 Blave 任務：

**選項 A：批次抓取（快速，但可能失敗）**
```powershell
.\scripts\抓取數據腳本\blave_all.ps1
```

**選項 B：個別任務執行（推薦，更穩定）**
```powershell
# 高優先級任務（建議先執行）
npm run capture:blave:toptrader:position
npm run capture:blave:holder_concentration:overview
npm run capture:blave:whale_hunter:overview

# 中優先級（可選）
npm run capture:blave:market_sentiment:overview
npm run capture:blave:taker_intensity:overview
npm run capture:blave:oi_imbalance:overview
npm run capture:blave:liquidation:overview

# 低優先級（可選）
npm run capture:blave:funding_rate:overview
npm run capture:blave:funding_rate:history
npm run capture:blave:squeeze_momentum:history
```

**選項 C：跳過 Blave 抓取，只用網路搜索**
- 如果 Blave 抓取一直失敗，可以跳過 Blave 數據
- 直接進入「階段 3：網路搜索」
- 提示詞仍可正常執行，Blave 數據會標註 N/A

### 階段 3：網路搜索（必備）

使用 AI 助手進行以下搜索：

#### 搜索 1：最新價格
```
BTC ETH SOL XRP BNB price today YYYY-MM-DD cryptocurrency market
```

#### 搜索 2：市場新聞
```
cryptocurrency market news today macro economic events YYYY-MM-DD
```

#### 搜索 3：技術分析
```
Bitcoin Ethereum support resistance levels current analysis YYYY
```

#### 搜索 4：Volume Profile（可選）
```
Bitcoin Ethereum volume profile POC VAH VAL current levels YYYY
```

### 階段 4：整合分析

結合 Blave 數據 + 網路搜索結果，按照 [交易提示詞模板](#交易提示詞模板) 生成分析報告。

---

## 📊 Blave 數據抓取任務

### 可用任務清單

| 任務名稱 | npm script | 說明 | 優先級 |
|---------|-----------|------|--------|
| Blave 頂尖交易員-部位 | `npm run capture:blave:toptrader:position` | 聰明錢部位 | 🔴 高 |
| 籌碼集中度-總覽 | `npm run capture:blave:holder_concentration:overview` | 持有者分佈 | 🔴 高 |
| 巨鯨警報-總覽 | `npm run capture:blave:whale_hunter:overview` | 大戶動向 | 🔴 高 |
| 市場情緒-總覽 | `npm run capture:blave:market_sentiment:overview` | 整體氛圍 | 🟡 中 |
| 多空力道-總覽 | `npm run capture:blave:taker_intensity:overview` | 買賣壓力 | 🟡 中 |
| OI 失衡-總覽 | `npm run capture:blave:oi_imbalance:overview` | 合約數據 | 🟡 中 |
| 爆倉-總覽 | `npm run capture:blave:liquidation:overview` | 清算數據 | 🟡 中 |
| 資金費率-總覽 | `npm run capture:blave:funding_rate:overview` | 永續合約 | 🟢 低 |
| 資金費率-歷史 | `npm run capture:blave:funding_rate:history` | 歷史趨勢 | 🟢 低 |
| 擠壓動能-歷史 | `npm run capture:blave:squeeze_momentum:history` | 動能指標 | 🟢 低 |

### 快速抓取建議

**精簡模式（推薦）**：只抓取 3 項高優先級
```powershell
npm run capture:blave:toptrader:position
npm run capture:blave:holder_concentration:overview
npm run capture:blave:whale_hunter:overview
```

**完整模式**：抓取所有 10 項
```powershell
# 使用圖形化選單
.\quick_start.ps1
```

---

## 🔍 網路搜索關鍵字清單

### 基礎搜索（每次必做）

| 搜索目標 | 關鍵字 |
|---------|--------|
| 最新價格 | `BTC ETH SOL XRP BNB price today YYYY-MM-DD cryptocurrency market` |
| 市場新聞 | `cryptocurrency market news today macro economic events YYYY-MM-DD` |
| 技術分析 | `Bitcoin Ethereum support resistance levels current analysis YYYY` |

### 進階搜索（選擇性）

| 搜索目標 | 關鍵字 |
|---------|--------|
| Volume Profile | `Bitcoin Ethereum volume profile POC VAH VAL current levels YYYY` |
| 機構動向 | `Bitcoin institutional flows ETF inflows current` |
| 熱門板塊 | `cryptocurrency hot sectors trending tokens YYYY-MM-DD` |
| 地緣政治 | `crypto macro geopolitical risks Federal Reserve policy` |

---

## 💡 交易提示詞模板

### 模板 1：全方位分析（適用於完整數據）

參考 `prompts/全方位分析.md`

### 模板 2：穩健版（推薦）

參考 `prompts/穩健版.md`

### 模板 3：高盈虧版

參考 `prompts/高盈虧版.md`

### 提示詞撰寫要點

1. **先講數據來源** - 說明使用 Blave + 網路搜索
2. **時間標記** - 標明數據時間（UTC+8）
3. **結構清晰** - 使用表格呈現關鍵數據
4. **風控優先** - 永遠先講風險，再講機會
5. **具體價位** - 給出入場、止盈、止損的具體價格

---

## 📁 輸出檔案說明

Blave 數據抓取後，輸出至 `data/blave/` 目錄：

```
data/
├── blave/                          # Blave 抓取腳本輸出
│   └── blave_top_trader_position_YYYY-MM-DD_HHMMSS/
│       ├── blave_top_trader_position_raw.json      # 原始 API 數據
│       ├── blave_top_trader_position_parsed.json   # 解析後數據
│       ├── blave_top_trader_position_top5.json     # Top 5 多空
│       ├── page_full.png                            # 完整截圖
│       ├── page.html                                # 頁面 HTML
│       ├── cookies.json                             # Cookie
│       └── task_result.json                         # 任務結果
└── search_out/                     # 00_執行步驟計劃書.md 執行後的查詢結果
```

---

## ⚠️ 注意事項

1. **Blave 需要登入** - 首次使用需手動登入 Blave
2. **網路搜索最新優先** - 永遠優先使用網路搜索獲取最新價格
3. **數據時間一致性** - 確保 Blave 數據與網路搜索時間接近
4. **風險控制** - 永遠設置止損，不要過度槓桿
5. **驗證數據** - 交叉核對多個來源的數據一致性

---

## 📞 故障排除

### 問題 1：Blave 無法擷取
- 確認已登入 Blave
- 檢查網路連線
- 手動打開 Blave 頁面確認正常

### 問題 2：中文路徑錯誤
- 使用根目錄的腳本，避免中文子目錄
- 使用 `test_blave_simple.ps1` 進行測試

### 問題 3：網路搜索資訊不足
- 調整搜索關鍵字
- 增加搜索來源數量
- 交叉核對多個新聞網站

---

## 🎓 快速參考表

| 動作 | 命令/方式 |
|-----|----------|
| 快速開始 | `.\quick_start.ps1` |
| 測試 Blave | `.\test_blave_simple.ps1` |
| 抓取頂尖交易員 | `npm run capture:blave:toptrader:position` |
| 抓取籌碼集中度 | `npm run capture:blave:holder_concentration:overview` |
| 網路搜索 | 直接告訴 AI 要搜索什麼 |

---

**最後更新：2026-05-05 (UTC+8) - 檔案重新命名為繁體中文**
